# toktab-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/toktab/: __init__.py  api.py  cli.py  display.py
tests/: conftest.py  test_api.py  test_cli.py  test_display.py
