[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toktab"
version = "0.1.0"
description = "CLI tool for TokTab LLM pricing data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tom Dyson", email = "tom@torchbox.com" }
]
keywords = ["llm", "pricing", "cli", "ai", "toktab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
]

[project.scripts]
toktab = "toktab.cli:cli"

[project.urls]
Homepage = "https://github.com/tomdyson/toktab-cli"
Repository = "https://github.com/tomdyson/toktab-cli"
Issues = "https://github.com/tomdyson/toktab-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/toktab"]
